# pyaglogen3D

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  fly.toml
aglogen_core/: Cargo.toml  README.md  pyproject.toml
aglogen_core/src/: lib.rs
aglogen_core/src/common/: geometry.rs  mod.rs  rng.rs  spatial.rs
aglogen_core/src/fractal/: box_counting.rs  box_counting_3d.rs  mod.rs  result.rs
aglogen_core/src/fractal/fraktal/: bisection.rs  granulated_2012.rs  image_processing.rs  mod.rs  params.rs  result.rs  voxel_2018.rs
aglogen_core/src/projection/: mod.rs
aglogen_core/src/simulation/: ballistic.rs  ballistic_cc.rs  cca.rs  dla.rs  metrics.rs  mod.rs  result.rs  sintering.rs  tunable.rs  tunable_cc.rs
backend/: Dockerfile  Procfile  README.md  manage.py  pyproject.toml
backend/apps/accounts/: adapters.py  admin.py  apps.py  models.py  permissions.py  serializers.py  sharing.py  sharing_serializers.py  sharing_views.py  urls.py  views.py
backend/apps/accounts/management/commands/: setup_oauth.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_sharing.py  0003_fix_legacy_user_fk.py
backend/apps/ai_assistant/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/ai_assistant/migrations/: 0001_initial.py  0002_add_ai_user_profile.py
backend/apps/ai_assistant/services/: __init__.py  ai_service.py  encryption.py
backend/apps/ai_assistant/services/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  groq_provider.py  models.py  openai_provider.py  xai_provider.py
backend/apps/ai_assistant/tests/: conftest.py  test_encryption.py  test_models.py  test_permissions.py  test_providers.py  test_views.py
backend/apps/ai_assistant/tools/: __init__.py  analysis_tools.py  base.py  context.py  decorators.py  executor.py  rag_tools.py  registration.py  registry.py  simulation_tools.py  study_tools.py  utility_tools.py  validation.py
backend/apps/core/: apps.py  urls.py
backend/apps/fractal_analysis/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/fractal_analysis/migrations/: 0001_initial.py  0002_add_fraktal_analysis.py  0003_rename_fraktal_ana_project_a1b2c3_idx_fraktal_ana_project_e0af13_idx_and_more.py  0004_add_auto_calibrate_field.py  0005_add_fraktal_name.py
backend/apps/projects/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_add_owner.py
backend/apps/rag/: __init__.py  admin.py  apps.py  models.py  tasks.py
backend/apps/rag/migrations/: 0001_initial.py  __init__.py
backend/apps/rag/services/: __init__.py  chunking.py  embedding_service.py  search_service.py
backend/apps/simulations/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/apps/simulations/migrations/: 0001_initial.py  0002_add_task_id.py  0003_add_ballistic_cc_algorithm.py  0004_add_batch_features.py  0005_add_is_batch_field.py
backend/apps/simulations/services/: __init__.py  projection.py
backend/config/: __init__.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/tests/: __init__.py  conftest.py  test_adjacency_graph.py  test_aglogen_core.py  test_api.py  test_models.py  test_serializers.py  test_utils.py
docs/: API_SCHEMAS.md  (+5 more)
(+196 files in other folders)
