[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "aglogen_core"
version = "0.1.0"
description = "High-performance 3D agglomerate simulation and fractal analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["simulation", "fractal", "aggregation", "particles", "scientific"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "maturin>=1.12.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
strip = true
